[project]
name = "meituan-mcp"
version = "0.1.0"
description = "基于 MCP 协议的美团外卖自动化助手，支持大模型智能点餐"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
meituan-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
